tests/samples/negative/types/noncopy_map_copy.ax
module noncopy_map_copy;

import std.core.map as map;

fn main() -> i32 {
    var first: map::CStringUsizeMap = map::cstring_usize_new();
    var second: map::CStringUsizeMap = first;
    second.destroy();
    return 0;
}
